# oats-cheatbox-firmware

./: CMakeLists.txt  README.md  tusb_config.h
src/: common.h  main.c  profile.c  profile.h  settings.h  virtual_button.c  virtual_button.h
src/platform/: gamepad_buttons.h  keycodes.h  platform.c  platform.h  report_ids.h  usb_descriptors.c
src/profiles/: 4_button.c  4_button.h  5_button.c  5_button.h  6_button.c  6_button.h  bbcf.c  bbcf.h  default.c  default.h  ggst.c  ggst.h  ggxrd.c  ggxrd.h  tekken.c  tekken.h
waratah/: cheatbox.h  cheatbox.wara
